add placeholder of each week

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -10,6 +10,7 @@ tags:
 
 过去4年，在 SAP 心无杂念。2020年，我将主题定为“探索”，从专注模式切换到探索模式。
 
+每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
 ## Faith
 
@@ -33,9 +34,61 @@ tags:
 
 ## Health
 
-1. 打磨自由泳的泳姿和耐力。
+每周2次有氧运动（跑步或游泳），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
-2. 学习力量训练，增肌，降体脂。
+- week1 
+- week2 
+- week3 
+- week4 
+- week5 
+- week6 
+- week7 
+- week8 
+- week9 
+- week10 
+- week11 
+- week12 
+- week13 
+- week14 
+- week15 
+- week16 
+- week17 
+- week18 
+- week19 
+- week20 
+- week21 
+- week22 
+- week23 
+- week24 
+- week25 
+- week26 
+- week27
+- week28
+- week29 
+- week30 
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
+
 
 ---
 
@@ -47,18 +100,78 @@ tags:
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
+3. 每个季度回济南看望爷爷奶奶和爸爸妈妈
+    - Quarter 1
+    - Quarter 2
+    - Quarter 3
+    - Quarter 4
+
+
 3. 教沐沐英文
   - 有没有什么办法可以让全家人的英文水平都提高上去？（除了出国旅游）
 
-4. 教沐沐编程（或许可以先从逻辑开始）
+4. 探索: 教沐沐编程（或许可以先从逻辑开始）
+
+5. 探索: 邀请沐沐的好朋友来家里做客
 
 ---
 
 ## English
 
+每周练习英文口语二次，可以是工作沟通，也可以约 iTalki 老师。
 
-1. 每周约 iTalki 老师 2 节课，练习英文口语。
-
+- week1 
+- week2 
+- week3 
+- week4 
+- week5 
+- week6 
+- week7 
+- week8 
+- week9 
+- week10 
+- week11 
+- week12 
+- week13 
+- week14 
+- week15 
+- week16 
+- week17 
+- week18 
+- week19 
+- week20 
+- week21 
+- week22 
+- week23 
+- week24 
+- week25 
+- week26 
+- week27
+- week28
+- week29 
+- week30 
+- week31 
+- week32 
+- week33 
+- week34 
+- week35 
+- week36 
+- week37
+- week38
+- week39
+- week40 
+- week41 
+- week42 
+- week43 
+- week44 
+- week45 
+- week46 
+- week47
+- week48
+- week49
+- week50 
+- week51 
+- week52 
 
 ---
 
@@ -95,6 +208,18 @@ tags:
 
 听听他们对这个世界的看法，兼听则明。
 
+- Jan.
+- Feb.
+- Mar.
+- Apr.
+- May.
+- June.
+- July.
+- Aug.
+- Sept.
+- Oct.
+- Nov.
+- Dec.
 
 5.**提高自己远程办公的能力**
 
@@ -109,11 +234,25 @@ tags:
 - 组织 Ruby 上海地区的线下聚会
 
 - 参与到开源项目 TiDB 数据库中
-	- 加入 TiDB Working Group
+  - 学习 TiDB 的开源文化和组织形式
+  - 参加 Meetup
+  - 加入 TiDB Working Group (optional)
 
-- 一个月写一篇公众号文章，接接地气。
+- 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
+  - Jan.
+  - Feb.
+  - Mar.
+  - Apr.
+  - May.
+  - June.
+  - July.
+  - Aug.
+  - Sept.
+  - Oct.
+  - Nov.
+  - Dec.
 
-- 欧阳志平邀请的公开课：Anki 介绍课程
+- 欧阳志平邀请的公开课：Anki
 
 - 用 Python 写个 PubMed 小网站，练习 Python。
 
@@ -130,39 +269,40 @@ tags:
 ## Church
 
 
-1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太是一个安静的人，一开始以为她会反感，结果是多虑了，她喜欢招待朋友。
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
+1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
+  - Jan.
+  - Feb.
+  - Mar.
+  - Apr.
+  - May.
+  - June.
+  - July.
+  - Aug.
+  - Sept.
+  - Oct.
+  - Nov.
+  - Dec.
 
-2. 在自己内心社交能力承受范围之内，每月去探访一个弟兄姐妹/朋友/同事。这应该不完全归到 Church 中，因为我自己也挺享受和朋友的在一起的时光。
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
+2. 在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。<!-- 如果他们有需要，就提供帮助。-->
+  - Jan.
+  - Feb.
+  - Mar.
+  - Apr.
+  - May.
+  - June.
+  - July.
+  - Aug.
+  - Sept.
+  - Oct.
+  - Nov.
+  - Dec.
 
-3. 继续做一些杂七杂八的，和 IT 相关的优化流程的事情。
+3. 在教会继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。
 
 
-4. Vincent 懂很多，趁他没有出国，和他聊聊天，或许可以请他来家里吃饭。 
-
+<!-- 
+  4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭。 (optional)
+-->
 
 
 以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
