--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -94,7 +94,7 @@ tags:
 
 ## Family
 
-1. 学开车，拿到驾照。
+1. 学开车，拿到驾照，这条是2019年的遗愿。
 
 2. 保持财务健康
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
@@ -118,7 +118,7 @@ tags:
 
 ## English
 
-每周练习英文口语二次，可以是工作沟通，也可以约 iTalki 老师。
+每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
 - week1 
 - week2 
@@ -306,3 +306,20 @@ tags:
 
 
 以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
+
+
+## Note
+
+毕业工作八年了，有六年都做了计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点我从来没有预测准确过。
+
+一是，学识少时，眼界也比较低，急功近利，随大流。等到自己稍微懂一点，就会发现当初寻求的东西都是虚空。
+
+二是，我是渺小的，哪扇门开启，哪扇门关闭，并不是我决定的，往往环境和境遇决定的。
+
+有谁能看得到明天呢？
+
+1. [My new year's resolutions for 2019](/plan-for-2019.html)
+2. [My new year's resolutions for 2017 and 2018](/plan-for-2017-and-2018.html)
+3. [My new year's resolutions for 2016](/study-plan-2016.html)
+4. [My new year's resolutions for 2015](/my-2014.html)
+4. [My new year's resolutions for 2013 and 2014](/study-plan.html)
