--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,7 +8,7 @@ tags:
   -
 ---
 
-过去4年，在 SAP 心无杂念。2020年，我将主题定为“探索”，从专注模式切换到探索模式。
+过去4年，在 SAP 心无杂念做技术，学英语。2020年，我将主题定为“探索”，从专注模式切换到探索模式。
 
 每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
