--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -95,6 +95,13 @@ tags:
 ## Family
 
 1. 学开车，拿到驾照，这条是2019年的遗愿。
+  - week
+  - week
+  - week
+  - week
+  - week
+  - week
+  - week
 
 2. 保持财务健康
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
