update yearly review

--- a/_posts/2019-01-10-plan-for-2019.md
+++ b/_posts/2019-01-10-plan-for-2019.md
@@ -106,6 +106,7 @@ tags:
 	- 2019-11-15 Cell Group
 	- 2019-11-24 邀请小蓝晓晓，向文，若郎来家里聚餐，给刘小坤过生日。
 	- 2019-12-09 邀请若郎和向文来家里吃饭
+	- 2019-12-21 邀请李帅和他的两个女儿来家里玩
 
 2. 每天做地铁经过人民广场时，顺便给流浪汉买早餐。
 	- week1 done
