--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -18,6 +18,7 @@ tags:
 
 - 《约翰卫斯理日记》
 - 戴德生《人往哪里去》
+- 斯托得《无与伦比的基督》
 
 听不同讲道人的讲道
 
@@ -34,7 +35,7 @@ tags:
 
 ## Health
 
-每周2次有氧运动（跑步或游泳），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
+每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
 - week1 
 - week2 
@@ -117,9 +118,12 @@ tags:
 3. 教沐沐英文
   - 有没有什么办法可以让全家人的英文水平都提高上去？（除了出国旅游）
 
-4. 探索: 教沐沐编程（或许可以先从逻辑开始）
+4. 探索: 教沐沐打字
 
-5. 探索: 邀请沐沐的好朋友来家里做客
+5. 探索: 教沐沐编程（或许可以先从逻辑开始）
+
+6. 探索: 邀请沐沐的好朋友来家里做客
+
 
 ---
 
@@ -315,9 +319,9 @@ tags:
 以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
 
 
-## Note
+## 感概
 
-毕业工作八年了，有六年都做了计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点我从来没有预测准确过。
+毕业工作八年了，有六年都做了计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点都是巧合。
 
 一是，学识少时，眼界也比较低，急功近利，随大流。等到自己稍微懂一点，就会发现当初寻求的东西都是虚空。
 
