--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,9 +8,10 @@ tags:
   -
 ---
 
-过去4年，在 SAP 心无杂念做技术，学英语。2020年，我将主题定为“探索”，从专注模式切换到探索模式。
+以下为2020年的计划，主题是“探索”。
 
-每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
+
+为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
 ## Faith
 
