--- a/_posts/2019-12-31-wine.md
+++ b/_posts/2019-12-31-wine.md
@@ -37,8 +37,6 @@ tags:
 
 所以我一直坚信自己的滴酒不沾的策略无论是从“圣经教导”（打引号），还是从理性的角度都是路线正确的。
 
-并且会把“喝酒的基督徒”判断为二等公民。
-
 ## 重新认识酒
 
 但是在一次基督徒的聚会中，很多人饮酒了，而且长老还说圣经里也说酒是个好东西，但是不能醉酒。我心想：怎么可能？箴言里很多章节都在批评饮酒。你是不是喝多了？
@@ -62,7 +60,7 @@ tags:
 > 27 又拿起杯来，祝谢了，递给他们，说：“你们都喝这个，   
 > 28 因为这是我立约的血，为多人流出来，使罪得赦。   
 
-
+喝酒是一个很普通的事情。
 
 ## 当今时代的风险
 
@@ -70,21 +68,22 @@ tags:
 
 虽然圣经中并不禁止饮酒，确是反对酗酒和醉酒的。在我们这个时代，因着酿酒工艺的提高，醉酒的风险更高，需要更加小心。
 
-喝醉了就容易做蠢事，胡言乱语，寻衅滋事，上错床。
+喝醉了就容易做蠢事，胡言乱语，做出格的事。
 
 ## 我以后对酒的态度
 
 第一，圣经没有禁止喝酒。聚餐时适量饮酒是很正常的社交生活，只要不醉酒就好。
 
-第二，避免自己以“是否喝酒”来评判别人是否是个好基督徒。
+第二，喝酒只是一种生活方式，避免以“是否喝酒”来评判别人是否是个好基督徒。
 
-第二，我还是坚持滴酒不沾。
+第二，我还是使用过去的策略：滴酒不沾。
 
 - 不好这一口。
 - 喝完胃疼。
 - 我是内向的人，在酒桌上和陌生人打交道很消耗精力。
 - 不熟悉酒桌文化，把握不好界限，很容易被人放倒。
-- 我的职业是和机器打交道，不需要喝酒来拓展社交圈子。
+- 我不需要喝酒来拓展社交圈子。
+- 损伤智力。
 
 
 ## 参考资料
