--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -10,16 +10,17 @@ tags:
 
 以下为2020年的计划，主题是“探索”。
 
-
 为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
 ## Faith
 
-继续努力搞明白福音，多读书，读圣经，教会史，传记，日记。
+继续努力搞明白福音。多读书，读圣经，教会史，传记，日记。
 
-- 《约翰卫斯理日记》
+- 《约翰卫斯理日记》✔️
 - 戴德生《人往哪里去》
-- 斯托得《无与伦比的基督》
+- 斯托得《无与伦比的基督》✔️
+- 《英国复兴领袖传》
+- 《软弱之道》✔️
 
 听不同讲道人的讲道
 
@@ -38,7 +39,7 @@ tags:
 
 每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
-- week1 
+- week1 （❌ 只游了一次，不过似乎找到自由泳换气的诀窍了）
 - week2 
 - week3 
 - week4 
@@ -110,7 +111,7 @@ tags:
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 
 3. 每个季度回济南看望爷爷奶奶和爸爸妈妈
-    - Quarter 1
+    - Quarter 1 ✔️
     - Quarter 2
     - Quarter 3
     - Quarter 4
@@ -238,7 +239,7 @@ tags:
 - 规律的作息
 - 充足的睡眠
 - 强壮的身体
-- 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 bucket。
+- 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。
 
 
 **业余爱好探索**
@@ -282,7 +283,7 @@ tags:
 
 
 1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
-  - Jan.
+  - 2020-01-01 宜山小组元旦聚餐
   - Feb.
   - Mar.
   - Apr.
