--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,9 +8,11 @@ tags:
   -
 ---
 
-以下为2020年的计划，主题是“探索”。
+以下是我2020年的计划，分了五个主题按照优先级从高到低排序：信仰，健康，家庭，职场，教会。
 
-为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
+主题是“探索”。
+
+
 
 ## Faith
 
@@ -209,17 +211,15 @@ tags:
 
 2.**考个 AWS Certified Solutions Architect 证书。**
 
-我应该会在外企这条路上继续干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
+我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
 
 3.**打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 
-4.**每个月给一个老朋友打电话（或吃饭）。**
+4.**每个月和一个老朋友打电话（或吃饭），叙叙旧。**
 
-这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。
-
-听听他们对这个世界的看法，兼听则明。
+这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
 
 - Jan.
 - Feb.
@@ -283,7 +283,7 @@ tags:
 
 
 1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
-  - 2020-01-01 宜山小组元旦聚餐
+  - Jan. 2020-01-01 宜山小组元旦聚餐
   - Feb.
   - Mar.
   - Apr.
@@ -321,11 +321,14 @@ tags:
 以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
 
 
+为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
+
+
 ## 感概
 
-毕业工作八年了，有六年都做了计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点都是巧合。
+毕业工作八年了，有六年都做了年度计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点都是巧合。
 
-一是，学识少时，眼界也比较低，急功近利，随大流。等到自己稍微懂一点，就会发现当初寻求的东西都是虚空。
+一是，学识少时，眼界也比较低，急功近利，随大流。等到自己稍微懂一点，就会发现当初寻求的东西都不值一提。
 
 二是，我是渺小的，哪扇门开启，哪扇门关闭，并不是我决定的，往往环境和境遇决定的。
 
