--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -242,7 +242,7 @@ tags:
 - 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。
 
 
-**业余爱好探索**
+6.**业余爱好探索**
 
 - 组织 Ruby 上海地区的线下聚会
 
@@ -277,7 +277,7 @@ tags:
 
 - Flash Card
 
-
+---
 
 ## Church
 
