--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -16,13 +16,15 @@ tags:
 
 ## Faith
 
+每天读经祷告，每周聚会，无特殊原因不要缺席。
+
 继续努力搞明白福音。多读书，读圣经，教会史，传记，日记。
 
 - 《约翰卫斯理日记》✔️
 - 戴德生《人往哪里去》
 - 斯托得《无与伦比的基督》✔️
-- 《英国复兴领袖传》
 - 《软弱之道》✔️
+- 《英国复兴领袖传》
 
 听不同讲道人的讲道
 
@@ -32,7 +34,62 @@ tags:
 探索，不对自己做硬性要求
 
 - 去 Yumin 的教会闲逛，搞清楚道金斯逻辑缺陷是什么。
-- 周六去 James 的教会闲逛，看看是否有所收获。
+- ~~周六去 James 的教会闲逛，看看是否有所收获。(不适合)~~ 
+
+关于信仰的每周自省
+
+- week1 ✔️ 读完了《英国复兴领袖传》怀菲特
+- week2 ✔️ 读完了《英国复兴领袖传》约翰卫斯理
+- week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉罗曼的部分。
+- week4 
+- week5 
+- week6 
+- week7 
+- week8 
+- week9 
+- week10
+- week11
+- week12
+- week13
+- week14
+- week15
+- week16
+- week17
+- week18
+- week19
+- week20
+- week21
+- week22
+- week23
+- week24
+- week25
+- week26
+- week27
+- week28
+- week29
+- week30
+- week31
+- week32
+- week33
+- week34
+- week35
+- week36
+- week37
+- week38
+- week39
+- week40
+- week41
+- week42
+- week43
+- week44
+- week45
+- week46
+- week47
+- week48
+- week49
+- week50
+- week51
+- week52
 
 
 ---
@@ -41,9 +98,9 @@ tags:
 
 每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
-- week1 （❌ 只游了一次，不过似乎找到自由泳换气的诀窍了）
-- week2 
-- week3 
+- week1 （🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了）
+- week2 （🔴 failed 只游一次，力量训练一次）
+- week3 （🔴 failed 只跑步一次）
 - week4 
 - week5 
 - week6 
@@ -135,9 +192,9 @@ tags:
 
 每周练习英文口语二次，可以是工作沟通，可以是教会内培训，也可以约 iTalki 老师。
 
-- week1 
-- week2 
-- week3 
+- week1 🔴 failed 一次都没聊
+- week2 🔴 failed 一次都没聊
+- week3 🔴 failed 一次都没聊
 - week4 
 - week5 
 - week6 
@@ -211,6 +268,9 @@ tags:
 
 我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
+- week1 折腾 Lambda + Gateway
+- week2 折腾 Lanbda + Gateway
+- week3 在生产环境折腾了一周 AWS route 53, Application Load balancer
 
 3.**打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
@@ -281,18 +341,20 @@ tags:
 
 
 1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
-  - Jan. 2020-01-01 宜山小组元旦聚餐
-  - Feb.
-  - Mar.
-  - Apr.
-  - May.
-  - June.
-  - July.
-  - Aug.
-  - Sept.
-  - Oct.
-  - Nov.
-  - Dec.
+
+    - 2020-01-01 宜山小组元旦聚餐 ✔️
+    - 2020-01-19 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。✔️
+    - Feb. 
+    - Mar.
+    - Apr.
+    - May.
+    - June.
+    - July.
+    - Aug.
+    - Sept.
+    - Oct.
+    - Nov.
+    - Dec.
 
 2. 在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。<!-- 如果他们有需要，就提供帮助。-->
   - Jan.
@@ -311,15 +373,15 @@ tags:
 3. 在教会继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。
 
 
-<!-- 
-  4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭。 (optional)
--->
 
+4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭，不做硬性计划，聊到哪算哪。
 
-以上挺多的了，2020 年能做到 70% 就算圆满完成任务了。
+	- 2020-01-13 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。✔️
+	
 
+---
 
-为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
+2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
 
 ## 感概
