archive old post

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -101,7 +101,7 @@ tags:
 - week1 （🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了）
 - week2 （🔴 failed 只游一次，力量训练一次）
 - week3 （🔴 failed 只跑步一次）
-- week4 
+- week4: 游泳一次
 - week5 
 - week6 
 - week7 
@@ -195,7 +195,7 @@ tags:
 - week1 🔴 failed 一次都没聊
 - week2 🔴 failed 一次都没聊
 - week3 🔴 failed 一次都没聊
-- week4 
+- week4: Talk with Desirene Neo
 - week5 
 - week6 
 - week7 
@@ -268,9 +268,10 @@ tags:
 
 我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
-- week1 折腾 Lambda + Gateway
-- week2 折腾 Lanbda + Gateway
-- week3 在生产环境折腾了一周 AWS route 53, Application Load balancer
+- week1 Security Group
+- week2 Lambda/Gateway
+- week3 AWS route 53 / ALB / RDS
+- week4 S3 / Glacier Storage
 
 3.**打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
