how to improve the ability of self control

--- a/_posts/2019-12-31-wine.md
+++ b/_posts/2019-12-31-wine.md
@@ -88,13 +88,9 @@ tags:
 
 ## 参考资料
 
-维基百科：基督教对酒的观点
+1. [维基百科：基督教对酒的观点](https://zh.wikipedia.org/zh-cn/%E5%9F%BA%E7%9D%A3%E6%95%99%E5%B0%8D%E9%85%92%E7%9A%84%E8%A7%80%E9%BB%9E)
 
-https://zh.wikipedia.org/zh-cn/%E5%9F%BA%E7%9D%A3%E6%95%99%E5%B0%8D%E9%85%92%E7%9A%84%E8%A7%80%E9%BB%9E
-
-喝酒是犯罪吗？
-
-https://www.tgcchinese.org/article/is-it-a-sin-to-drink-alcohol
+2. [喝酒是犯罪吗？](https://www.tgcchinese.org/article/is-it-a-sin-to-drink-alcohol)
 
 
 
