update weekly goal

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -39,9 +39,9 @@ tags:
 关于信仰的每周自省
 
 - week1 ✔️ 读完了《英国复兴领袖传》怀菲特
-- week2 ✔️ 读完了《英国复兴领袖传》约翰卫斯理
-- week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉罗曼的部分。
-- week4 
+- week2 ✔️ 读完了《英国复兴领袖传》约翰·卫斯理
+- week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉·罗曼的部分。
+- week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
 - week5 
 - week6 
 - week7 
@@ -98,10 +98,10 @@ tags:
 
 每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
-- week1 （🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了）
-- week2 （🔴 failed 只游一次，力量训练一次）
-- week3 （🔴 failed 只跑步一次）
-- week4: 游泳一次
+- week1 🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了
+- week2 🔴 failed 只游一次，力量训练一次）
+- week3 🔴 failed 只跑步一次
+- week4 ✔️ 游泳一次，跑步二次
 - week5 
 - week6 
 - week7 
@@ -195,7 +195,7 @@ tags:
 - week1 🔴 failed 一次都没聊
 - week2 🔴 failed 一次都没聊
 - week3 🔴 failed 一次都没聊
-- week4: Talk with Desirene Neo
+- week4: ✔️ Talk with Desirene Neo
 - week5 
 - week6 
 - week7 
@@ -249,7 +249,7 @@ tags:
 
 ## Work
 
-1.**成就 Workstream, 也让它成就自己。**
+**1.成就 Workstream, 也让它成就自己。**
 
 在薄荷的时候，有 CTO 亲自带着我，我在他搭的架子下完成各个组件(microservice) 的开发。在 SAP Jam 的时候，温哥华的架构师敲定技术选型。整个职业生涯，我都被"保护"的很好。
 
@@ -258,29 +258,31 @@ tags:
 - 能不能把 CI/CD 搭好?
 - 能不能把 MicroService 搞起来?
 - Devops 能做到什么程度?
-- 能不能写好 Golng / Python / JavaScript?
+- 能不能写好 Golang / Python / JavaScript?
 - 能不能承载2000万的流量?
 
 激动人心且充满压力。
 
 
-2.**考个 AWS Certified Solutions Architect 证书。**
+**2.考个 AWS Certified Solutions Architect 证书。**
 
 我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
-- week1 Security Group
-- week2 Lambda/Gateway
-- week3 AWS route 53 / ALB / RDS
-- week4 S3 / Glacier Storage
+- week1 ✔️ Security Group
+- week2 ✔️ Lambda/Gateway
+- week3 ✔️ AWS route 53 / ALB / RDS
+- week4 ✔️ S3/Glacier Storage
+- week5 ✔️ IAM/RDS/SQS
+- 
 
-3.**打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
+**3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 
-4.**每个月和一个老朋友打电话（或吃饭），叙叙旧。**
+**4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
 
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
 
-- Jan.
+- Jan. Talk with Sam Qiu.
 - Feb.
 - Mar.
 - Apr.
@@ -293,7 +295,7 @@ tags:
 - Nov.
 - Dec.
 
-5.**提高自己远程办公的能力**
+**5.提高自己远程办公的能力**
 
 - 规律的作息
 - 充足的睡眠
@@ -301,7 +303,7 @@ tags:
 - 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。
 
 
-6.**业余爱好探索**
+**6.业余爱好探索**
 
 - 组织 Ruby 上海地区的线下聚会
 
@@ -311,7 +313,7 @@ tags:
   - 加入 TiDB Working Group (optional)
 
 - 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
-  - Jan.
+  - Jan. 《远程办公：如何提高自己的自制力》
   - Feb.
   - Mar.
   - Apr.
@@ -343,8 +345,8 @@ tags:
 
 1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
 
-    - 2020-01-01 宜山小组元旦聚餐 ✔️
-    - 2020-01-19 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。✔️
+    - 2020-01-01 ✔️ 宜山小组元旦聚餐 
+    - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
     - Feb. 
     - Mar.
     - Apr.
@@ -377,8 +379,16 @@ tags:
 
 4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭，不做硬性计划，聊到哪算哪。
 
-	- 2020-01-13 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。✔️
+	- 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 	
+
+---
+
+## 计划外事情
+
+- week4 ✔️ 读完《欲罢不能》
+- 
+
 
 ---
 
