--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -99,10 +99,10 @@ tags:
 每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
 - week1 🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了
-- week2 🔴 failed 只游一次，力量训练一次）
-- week3 🔴 failed 只跑步一次
-- week4 ✔️ 游泳一次，跑步二次
-- week5 
+- week2 🔴 failed 游泳+1，力量训练+1
+- week3 🔴 failed 跑步+1
+- week4 ✔️ 跑步+2，游泳 +1
+- week5 跑步+1
 - week6 
 - week7 
 - week8 
@@ -185,6 +185,9 @@ tags:
 
 6. 探索: 邀请沐沐的好朋友来家里做客
 
+7. 探索：教沐沐识字
+	- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
+
 
 ---
 
@@ -263,6 +266,9 @@ tags:
 
 激动人心且充满压力。
 
+- week5 ✔️ Short Link service
+- Week6
+
 
 **2.考个 AWS Certified Solutions Architect 证书。**
 
@@ -272,8 +278,10 @@ tags:
 - week2 ✔️ Lambda/Gateway
 - week3 ✔️ AWS route 53 / ALB / RDS
 - week4 ✔️ S3/Glacier Storage
-- week5 ✔️ IAM/RDS/SQS
-- 
+- week5  
+	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
+	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
+- week6
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
@@ -282,7 +290,7 @@ tags:
 
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
 
-- Jan. Talk with Sam Qiu.
+- Jan. Talk with Sam Qiu. ✔️
 - Feb.
 - Mar.
 - Apr.
@@ -313,7 +321,9 @@ tags:
   - 加入 TiDB Working Group (optional)
 
 - 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
-  - Jan. 《远程办公：如何提高自己的自制力》
+  - Jan 《远程办公：如何提高自己的自制力》✔️
+	  - 学会开白名单
+	  - 被 CSDN 转载
   - Feb.
   - Mar.
   - Apr.
