--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -42,7 +42,7 @@ tags:
 - week2 ✔️ 读完了《英国复兴领袖传》约翰·卫斯理
 - week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉·罗曼的部分。
 - week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
-- week5 
+- week5 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week6 
 - week7 
 - week8 
@@ -98,11 +98,11 @@ tags:
 
 每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
 
-- week1 🔴 failed 只游了一次，不过似乎找到自由泳换气的诀窍了
+- week1 🔴 failed 游泳+1，不过似乎找到自由泳换气的诀窍了
 - week2 🔴 failed 游泳+1，力量训练+1
 - week3 🔴 failed 跑步+1
-- week4 ✔️ 跑步+2，游泳 +1
-- week5 跑步+1
+- week4 ✔️ 跑步+2，游泳+1
+- week5 🔴 跑步+2
 - week6 
 - week7 
 - week8 
@@ -198,8 +198,8 @@ tags:
 - week1 🔴 failed 一次都没聊
 - week2 🔴 failed 一次都没聊
 - week3 🔴 failed 一次都没聊
-- week4: ✔️ Talk with Desirene Neo
-- week5 
+- week4 ✔️ Talk with Desirene Neo
+- week5 🔴 failed
 - week6 
 - week7 
 - week8 
@@ -266,7 +266,7 @@ tags:
 
 激动人心且充满压力。
 
-- week5 ✔️ Short Link service
+- week5 ✔️ Short Link service / Build a Jenkins
 - Week6
 
 
@@ -397,7 +397,7 @@ tags:
 ## 计划外事情
 
 - week4 ✔️ 读完《欲罢不能》
-- 
+- week6 ✔️ 低吸中证500和盈富基金，投资 Gilead Sciences
 
 
 ---
