update weekly review

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -43,7 +43,7 @@ tags:
 - week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉·罗曼的部分。
 - week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
 - week5 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week6 
+- week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。
 - week7 
 - week8 
 - week9 
@@ -102,8 +102,8 @@ tags:
 - week2 🔴 failed 游泳+1，力量训练+1
 - week3 🔴 failed 跑步+1
 - week4 ✔️ 跑步+2，游泳+1
-- week5 🔴 跑步+2
-- week6 
+- week5 🔴 跑步+2 failed due to 冠状病毒疫情
+- week6 🔴 failed due to 冠状病毒疫情
 - week7 
 - week8 
 - week9 
@@ -200,7 +200,7 @@ tags:
 - week3 🔴 failed 一次都没聊
 - week4 ✔️ Talk with Desirene Neo
 - week5 🔴 failed
-- week6 
+- week6 🔴 failed
 - week7 
 - week8 
 - week9 
@@ -267,7 +267,6 @@ tags:
 激动人心且充满压力。
 
 - week5 ✔️ Short Link service / Build a Jenkins
-- Week6
 
 
 **2.考个 AWS Certified Solutions Architect 证书。**
@@ -281,9 +280,11 @@ tags:
 - week5  
 	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
 	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
-- week6
+
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
+
+- week6 ✔️ learn React
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -323,7 +324,7 @@ tags:
 - 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
   - Jan 《远程办公：如何提高自己的自制力》✔️
 	  - 学会开白名单
-	  - 被 CSDN 转载
+	  - 被 CSDN/51job/开智/进退学说转载
   - Feb.
   - Mar.
   - Apr.
@@ -398,7 +399,7 @@ tags:
 ## 计划外事情
 
 - week4 ✔️ 读完《欲罢不能》
-- week6 ✔️ 低吸中证500和盈富基金，投资 Gilead Sciences
+- week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
 
 
 ---
