--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -285,6 +285,7 @@ tags:
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 - week6 ✔️ learn React
+- week7 ✔️ ant design / router / redux
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -325,7 +326,11 @@ tags:
   - Jan 《远程办公：如何提高自己的自制力》✔️
 	  - 学会开白名单
 	  - 被 CSDN/51job/开智/进退学说转载
-  - Feb.
+  - Feb 《远程办公：如何边工作，边带孩子？》✔️
+		- 学会设置"所有人都可以留言"
+		- 打赏
+		- 流量主
+		- 商品推广
   - Mar.
   - Apr.
   - May.
