update weekly plan

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -285,7 +285,7 @@ tags:
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 - week6 ✔️ learn React
-- week7 ✔️ ant design / router / redux
+- week7 ✔️ ant design / router / redux / DvaJS
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
