update weekly plan

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -44,8 +44,8 @@ tags:
 - week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
 - week5 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。
-- week7 
-- week8 
+- week7 ✔️ 每天和小蓝向文为疫情祷告。
+- week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week9 
 - week10
 - week11
@@ -104,8 +104,8 @@ tags:
 - week4 ✔️ 跑步+2，游泳+1
 - week5 🔴 跑步+2 failed due to 冠状病毒疫情
 - week6 🔴 failed due to 冠状病毒疫情
-- week7 
-- week8 
+- week7 🔴 failed due to 冠状病毒疫情
+- week8 🔴 failed due to 冠状病毒疫情
 - week9 
 - week10 
 - week11 
@@ -201,9 +201,9 @@ tags:
 - week4 ✔️ Talk with Desirene Neo
 - week5 🔴 failed
 - week6 🔴 failed
-- week7 
-- week8 
-- week9 
+- week7 🔴 failed
+- week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
+- week9 ✔️ talk with Mary Chanthavong / Team meeting
 - week10 
 - week11 
 - week12 
@@ -267,7 +267,7 @@ tags:
 激动人心且充满压力。
 
 - week5 ✔️ Short Link service / Build a Jenkins
-
+- week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
 
 **2.考个 AWS Certified Solutions Architect 证书。**
 
@@ -280,12 +280,14 @@ tags:
 - week5  
 	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
 	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
+- week8 ✔️ Application Load balancer && HTTP/2
 
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
 - week6 ✔️ learn React
-- week7 ✔️ ant design / router / redux / DvaJS
+- week7 ✔️ ant design / router / redux / Dva
+- week8 ✔️ reflex
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
