update weekly plan

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -43,10 +43,10 @@ tags:
 - week3 ✔️ 读完了《英国复兴领袖传》格里姆肖/威廉·罗曼的部分。
 - week4 ✔️ 读完了《英国复兴领袖传》贝里齐。
 - week5 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。
+- week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。大部分领袖都糊涂了不下五年，我何必强求自己信仰坚定无比，决定对自己不再苛刻。
 - week7 ✔️ 每天和小蓝向文为疫情祷告。
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week9 
+- week9 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week10
 - week11
 - week12
@@ -96,17 +96,17 @@ tags:
 
 ## Health
 
-每周2次有氧运动（跑步或游泳皆可），1次力量训练。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。
+每周2次有氧运动（跑步或游泳皆可）。打磨自由泳的泳姿和耐力，其次学习力量训练，增肌，降体脂。若健身房开业，加一次力量训练。
 
 - week1 🔴 failed 游泳+1，不过似乎找到自由泳换气的诀窍了
 - week2 🔴 failed 游泳+1，力量训练+1
 - week3 🔴 failed 跑步+1
 - week4 ✔️ 跑步+2，游泳+1
-- week5 🔴 跑步+2 failed due to 冠状病毒疫情
+- week5 ✔️ 跑步+2 
 - week6 🔴 failed due to 冠状病毒疫情
 - week7 🔴 failed due to 冠状病毒疫情
 - week8 🔴 failed due to 冠状病毒疫情
-- week9 
+- week9 ✔️ 跑步+2
 - week10 
 - week11 
 - week12 
@@ -203,8 +203,8 @@ tags:
 - week6 🔴 failed
 - week7 🔴 failed
 - week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
-- week9 ✔️ talk with Mary Chanthavong / Team meeting
-- week10 
+- week9 ✔️ talk with Mary / Team meeting
+- week10 talk with Rob / 
 - week11 
 - week12 
 - week13 
@@ -295,7 +295,7 @@ tags:
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
 
 - Jan. Talk with Sam Qiu. ✔️
-- Feb.
+- Feb. Had a podcast with Python 大妈 & 张烁 ✔️
 - Mar.
 - Apr.
 - May.
@@ -334,6 +334,7 @@ tags:
 	  - 流量主
 	  - 商品推广
   - Mar. 《远程办公：如何招聘有自驱力的员工？》
+	  - 找准定位 soho / programming/ remote worker
   - Apr.
   - May.
   - June.
@@ -355,17 +356,16 @@ tags:
 - 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
 
 - Flash Card
+	- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
 
 ---
 
 ## Church
 
-
 1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
 
     - 2020-01-01 ✔️ 宜山小组元旦聚餐 
     - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
-    - Feb. 
     - Mar.
     - Apr.
     - May.
@@ -378,8 +378,8 @@ tags:
     - Dec.
 
 2. 在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。<!-- 如果他们有需要，就提供帮助。-->
-  - Jan.
-  - Feb.
+  - Jan. 🔴 failed due to COVID-19
+  - Feb. 🔴 failed due to COVID-19
   - Mar.
   - Apr.
   - May.
@@ -394,13 +394,10 @@ tags:
 3. 在教会继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。
 	- week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
 
-
-
 4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭，不做硬性计划，聊到哪算哪。
 
 	- 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 	
-
 ---
 
 ## 计划外事情
