shepherd the heart of child

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -46,8 +46,8 @@ tags:
 - week6 ✔️ 读罗马书和《英国复兴领袖传》，每天和小蓝向文为疫情祷告。大部分领袖都糊涂了不下五年，我何必强求自己信仰坚定无比，决定对自己不再苛刻。
 - week7 ✔️ 每天和小蓝向文为疫情祷告。
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week9 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
-- week10
+- week9 🔴 疏于读经。Pray 1110000
+- week10 Bible 010110, Pray 1111100
 - week11
 - week12
 - week13
@@ -204,7 +204,7 @@ tags:
 - week7 🔴 failed
 - week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
 - week9 ✔️ talk with Mary / Team meeting
-- week10 talk with Rob / 
+- week10 ✔️ talk with Rob, Lydia(in Team Meeting), Phil
 - week11 
 - week12 
 - week13 
@@ -288,6 +288,7 @@ tags:
 - week6 ✔️ learn React
 - week7 ✔️ ant design / router / redux / Dva
 - week8 ✔️ reflex
+- week10 ✔️ arrow function / redux connect, combine reducer
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -328,13 +329,14 @@ tags:
   - Jan 《远程办公：如何提高自己的自制力》✔️
 	  - 学会开白名单
 	  - 被 CSDN/51job/开智/进退学说转载
-  - Feb 《远程办公：如何边工作，边带孩子？》✔️
+  - 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
 	  - 学会设置"所有人都可以留言"
 	  - 打赏
 	  - 流量主
 	  - 商品推广
-  - Mar. 《远程办公：如何招聘有自驱力的员工？》
+  - 2020-02-29《远程办公：如何招聘有自驱力的员工？》
 	  - 找准定位 soho / programming/ remote worker
+	- 2020-03-07《教孩子管理金钱》
   - Apr.
   - May.
   - June.
