update weekly review

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -47,8 +47,8 @@ tags:
 - week7 ✔️ 每天和小蓝向文为疫情祷告。
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week9 🔴 疏于读经。Pray 1110000
-- week10 Bible 010110, Pray 1111100
-- week11
+- week10 ✔️ Bible 010111, Pray 1111100
+- week11 Bible 0000000 Pray 0000000
 - week12
 - week13
 - week14
@@ -107,7 +107,7 @@ tags:
 - week7 🔴 failed due to 冠状病毒疫情
 - week8 🔴 failed due to 冠状病毒疫情
 - week9 ✔️ 跑步+2
-- week10 
+- week10 🔴 跑步 0000001 
 - week11 
 - week12 
 - week13 
@@ -204,7 +204,7 @@ tags:
 - week7 🔴 failed
 - week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
 - week9 ✔️ talk with Mary / Team meeting
-- week10 ✔️ talk with Rob, Lydia(in Team Meeting), Phil
+- week10 ✔️ talk with Rob, Lydia(in Team Meeting), Phil, iTalki teacher Irene
 - week11 
 - week12 
 - week13 
@@ -288,7 +288,7 @@ tags:
 - week6 ✔️ learn React
 - week7 ✔️ ant design / router / redux / Dva
 - week8 ✔️ reflex
-- week10 ✔️ arrow function / redux connect, combine reducer
+- week10 ✔️ arrow function / redux connect, combine reducer, redux selector
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -329,6 +329,7 @@ tags:
   - Jan 《远程办公：如何提高自己的自制力》✔️
 	  - 学会开白名单
 	  - 被 CSDN/51job/开智/进退学说转载
+	  - 无意蹭了热点，发现热点真的太有用了。
   - 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
 	  - 学会设置"所有人都可以留言"
 	  - 打赏
