rules for investment

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -47,8 +47,8 @@ tags:
 - week7 ✔️ 每天和小蓝向文为疫情祷告。
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week9 🔴 疏于读经。Pray 1110000
-- week10 ✔️ Bible 010111, Pray 1111100
-- week11 Bible 0000000 Pray 0000000
+- week10 ✔️ Bible 010111, Pray 1111111
+- week11 Bible 0000000 Pray 1000000
 - week12
 - week13
 - week14
@@ -165,9 +165,10 @@ tags:
   - week
   - week
 
-2. 保持财务健康
+2. 保持财务健康。
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
+
 
 3. 每个季度回济南看望爷爷奶奶和爸爸妈妈
     - Quarter 1 ✔️
@@ -187,6 +188,7 @@ tags:
 
 7. 探索：教沐沐识字
 	- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
+	- week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
 
 
 ---
@@ -356,6 +358,8 @@ tags:
 
 - 小朋友打疫苗日历提醒小助手
 
+- 微信小程序：保单管家
+
 - 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
 
 - Flash Card
@@ -407,7 +411,6 @@ tags:
 
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
-
 
 ---
 
