--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -48,7 +48,7 @@ tags:
 - week8 🔴 疏于读经。但是每天和小蓝向文一起为疫情祷告。
 - week9 🔴 疏于读经。Pray 1110000
 - week10 ✔️ Bible 010111, Pray 1111111
-- week11 Bible 0000000 Pray 1000000
+- week11 🔴 Bible 0000011 Pray 1111111
 - week12
 - week13
 - week14
@@ -108,7 +108,7 @@ tags:
 - week8 🔴 failed due to 冠状病毒疫情
 - week9 ✔️ 跑步+2
 - week10 🔴 跑步 0000001 
-- week11 
+- week11 🔴 跑步 0000010
 - week12 
 - week13 
 - week14 
@@ -168,7 +168,10 @@ tags:
 2. 保持财务健康。
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
-
+	- 交易原则
+		- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
+		- Rule2: 以后不再向别人推荐 ETF和股票，涨涨跌跌，勾人心魂，太害人了。
+		- 若违背以上原则，刘小坤重重的用管教杖责打二次。
 
 3. 每个季度回济南看望爷爷奶奶和爸爸妈妈
     - Quarter 1 ✔️
@@ -178,7 +181,8 @@ tags:
 
 
 3. 教沐沐英文
-  - 有没有什么办法可以让全家人的英文水平都提高上去？（除了出国旅游）
+  - 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
+	  - ✔️ 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min
 
 4. 探索: 教沐沐打字
 
@@ -207,7 +211,7 @@ tags:
 - week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
 - week9 ✔️ talk with Mary / Team meeting
 - week10 ✔️ talk with Rob, Lydia(in Team Meeting), Phil, iTalki teacher Irene
-- week11 
+- week11 🔴 
 - week12 
 - week13 
 - week14 
@@ -291,6 +295,7 @@ tags:
 - week7 ✔️ ant design / router / redux / Dva
 - week8 ✔️ reflex
 - week10 ✔️ arrow function / redux connect, combine reducer, redux selector
+- week11 ✔️ learn Redux though doing this [example](https://github.com/reduxjs/redux/tree/99d47a55d769c456ac902f6738f9a90627d7cc8f/examples/todomvc) project.
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -340,6 +345,7 @@ tags:
   - 2020-02-29《远程办公：如何招聘有自驱力的员工？》
 	  - 找准定位 soho / programming/ remote worker
 	- 2020-03-07《教孩子管理金钱》
+	- 2020-03-13 《吕小荣的股票交易原则》
   - Apr.
   - May.
   - June.
@@ -411,6 +417,7 @@ tags:
 
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
+- week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)
 
 ---
 
