update weekly review

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -209,9 +209,9 @@ tags:
 - week6 🔴 failed
 - week7 🔴 failed
 - week8 ✔️ Weekly team meeting / Had a meeting with Datadog sales.
-- week9 ✔️ talk with Mary / Team meeting
-- week10 ✔️ talk with Rob, Lydia(in Team Meeting), Phil, iTalki teacher Irene
-- week11 🔴 
+- week9 ✔️ talked with Mary / Team meeting
+- week10 ✔️ talked with Rob, Lydia(in Team Meeting), Phil, iTalki teacher Irene
+- week11 ✔️ watched lots of tech videos in youtube, e.g. RubyMine, DataGrip
 - week12 
 - week13 
 - week14 
