--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -49,8 +49,8 @@ tags:
 - week9 🔴 疏于读经。Pray 1110000
 - week10 ✔️ Bible 010111, Pray 1111111
 - week11 🔴 Bible 0000011 Pray 1111111
-- week12
-- week13
+- week12 ✔️ Bible 0101111 Pray 1111111
+- week13 ✔️ Bible 1111 Pray 1111
 - week14
 - week15
 - week16
@@ -109,8 +109,8 @@ tags:
 - week9 ✔️ 跑步+2
 - week10 🔴 跑步 0000001 
 - week11 🔴 跑步 0000010
-- week12 
-- week13 
+- week12 ✔️ 跑步 0000101
+- week13 跑步 00010
 - week14 
 - week15 
 - week16 
@@ -212,8 +212,8 @@ tags:
 - week9 ✔️ talked with Mary / Team meeting
 - week10 ✔️ talked with Rob, Lydia(in Team Meeting), Phil, iTalki teacher Irene
 - week11 ✔️ watched lots of tech videos in youtube, e.g. RubyMine, DataGrip
-- week12 
-- week13 
+- week12 🔴 failed
+- week13 ✔️ attend team meeting / watch CNN/ABC/WSJ news everyday
 - week14 
 - week15 
 - week16 
@@ -274,6 +274,7 @@ tags:
 
 - week5 ✔️ Short Link service / Build a Jenkins
 - week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
+- week12 ✔️ change phone number (a small frontend task)
 
 **2.考个 AWS Certified Solutions Architect 证书。**
 
@@ -287,6 +288,8 @@ tags:
 	- IAM/RDS/SQS/CloudFront/CloudFormation ✔️
 	-  Purchase [Udemy AWS practice test](https://www.udemy.com/course/aws-certified-solutions-architect-associate-amazon-practice-exams/) ✔️
 - week8 ✔️ Application Load balancer && HTTP/2
+- week12 🔴 no progress
+- week13 🔴 no progress
 
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
@@ -296,6 +299,8 @@ tags:
 - week8 ✔️ reflex
 - week10 ✔️ arrow function / redux connect, combine reducer, redux selector
 - week11 ✔️ learn Redux though doing this [example](https://github.com/reduxjs/redux/tree/99d47a55d769c456ac902f6738f9a90627d7cc8f/examples/todomvc) project.
+- week12 ✔️ JS prototype
+- week13 this / apply, call, binding
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -379,7 +384,7 @@ tags:
 
     - 2020-01-01 ✔️ 宜山小组元旦聚餐 
     - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
-    - Mar.
+    - 2020-03-28 ✔️ 疫情解除后，请小蓝夫妇/若郎/向文来家里吃火锅。
     - Apr.
     - May.
     - June.
