有人贪恋钱财，就被引诱离了真道，用许多愁苦把自己刺透了

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -50,7 +50,7 @@ tags:
 - week10 ✔️ Bible 010111, Pray 1111111
 - week11 🔴 Bible 0000011 Pray 1111111
 - week12 ✔️ Bible 0101111 Pray 1111111
-- week13 ✔️ Bible 1111 Pray 1111
+- week13 ✔️ Bible 1111111 Pray 1111101
 - week14
 - week15
 - week16
@@ -110,7 +110,7 @@ tags:
 - week10 🔴 跑步 0000001 
 - week11 🔴 跑步 0000010
 - week12 ✔️ 跑步 0000101
-- week13 跑步 00010
+- week13 🔴 跑步 000100 体重快140了，报警！
 - week14 
 - week15 
 - week16 
@@ -350,7 +350,7 @@ tags:
   - 2020-02-29《远程办公：如何招聘有自驱力的员工？》
 	  - 找准定位 soho / programming/ remote worker
 	- 2020-03-07《教孩子管理金钱》
-	- 2020-03-13 《吕小荣的股票交易原则》
+	- 2020-03-13 《吕小荣的股票交易原则》，文章名字起的不好
   - Apr.
   - May.
   - June.
@@ -384,7 +384,7 @@ tags:
 
     - 2020-01-01 ✔️ 宜山小组元旦聚餐 
     - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
-    - 2020-03-28 ✔️ 疫情解除后，请小蓝夫妇/若郎/向文来家里吃火锅。
+    - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
     - Apr.
     - May.
     - June.
@@ -422,7 +422,7 @@ tags:
 
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
-- week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)
+- week11 ✔️ 草拟一个适合自己的 [股票交易原则](https://mednoter.com/two-rules-for-investment.html)，避免对炒股上瘾。
 
 ---
 
