update new year resolution

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -51,7 +51,7 @@ tags:
 - week11 🔴 Bible 0000011 Pray 1111111
 - week12 ✔️ Bible 0101111 Pray 1111111
 - week13 ✔️ Bible 1111111 Pray 1111101
-- week14 Bible 1110 Pray 1111
+- week14 Bible 11101 Pray 11111
 - week15
 - week16
 - week17
@@ -111,7 +111,7 @@ tags:
 - week11 🔴 跑步 0000010
 - week12 ✔️ 跑步 0000101
 - week13 🔴 跑步 000100 体重快140了，报警！
-- week14 跑步 0001 
+- week14 跑步 00110
 - week15 
 - week16 
 - week17 
@@ -214,7 +214,7 @@ tags:
 - week11 ✔️ watched lots of tech videos in youtube, e.g. RubyMine, DataGrip
 - week12 🔴 failed
 - week13 ✔️ attend team meeting / watch CNN/ABC/WSJ news everyday / short meeting with Aaron about RaceTac
-- week14 elaboration meeting of WOTC
+- week14 elaboration meeting of WOTC / Janina /
 - week15 
 - week16 
 - week17 
@@ -290,7 +290,7 @@ tags:
 - week8 ✔️ Application Load balancer && HTTP/2
 - week12 🔴 no progress
 - week13 🔴 no progress
-- week14
+- week14 🔴 no progress
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
@@ -386,7 +386,7 @@ tags:
     - 2020-01-01 ✔️ 宜山小组元旦聚餐 
     - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
     - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
-    - Apr.
+    - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。
     - May.
     - June.
     - July.
