update new year resolution

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -51,7 +51,7 @@ tags:
 - week11 🔴 Bible 0000011 Pray 1111111
 - week12 ✔️ Bible 0101111 Pray 1111111
 - week13 ✔️ Bible 1111111 Pray 1111101
-- week14 Bible 11101 Pray 11111
+- week14 ✔️ Bible 11101 Pray 11111
 - week15
 - week16
 - week17
@@ -111,7 +111,7 @@ tags:
 - week11 🔴 跑步 0000010
 - week12 ✔️ 跑步 0000101
 - week13 🔴 跑步 000100 体重快140了，报警！
-- week14 跑步 00110
+- week14 ✔️ 跑步 00110
 - week15 
 - week16 
 - week17 
@@ -214,7 +214,7 @@ tags:
 - week11 ✔️ watched lots of tech videos in youtube, e.g. RubyMine, DataGrip
 - week12 🔴 failed
 - week13 ✔️ attend team meeting / watch CNN/ABC/WSJ news everyday / short meeting with Aaron about RaceTac
-- week14 elaboration meeting of WOTC / Janina /
+- week14 ✔️ elaboration meeting of WOTC / Janina +2 /
 - week15 
 - week16 
 - week17 
