update new year resolution

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -301,7 +301,7 @@ tags:
 - week11 ✔️ learn Redux though doing this [example](https://github.com/reduxjs/redux/tree/99d47a55d769c456ac902f6738f9a90627d7cc8f/examples/todomvc) project.
 - week12 ✔️ JS prototype
 - week13 ✔️ this / apply, call, binding
-- week14 ✔️ this
+- week14 ✔️ this / new
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -399,7 +399,7 @@ tags:
 2. 在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。<!-- 如果他们有需要，就提供帮助。-->
   - Jan. 🔴 failed due to COVID-19
   - Feb. 🔴 failed due to COVID-19
-  - Mar.
+  - Mar. 🔴 failed due to COVID-19
   - Apr.
   - May.
   - June.
