update new year resolution

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -168,7 +168,7 @@ tags:
 2. 保持财务健康。
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
-	- 交易原则
+	- 交易原则 ✔️ 
 		- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
 		- Rule2: 以后不再向别人推荐 ETF和股票，涨涨跌跌，勾人心魂，太害人了。
 		- 若违背以上原则，刘小坤重重的用管教杖责打二次。
@@ -182,7 +182,7 @@ tags:
 
 3. 教沐沐英文
   - 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
-	  - ✔️ 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min
+	  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️ 
 
 4. 探索: 教沐沐打字
 
@@ -342,16 +342,17 @@ tags:
   - Jan 《远程办公：如何提高自己的自制力》✔️
 	  - 学会开白名单
 	  - 被 CSDN/51job/开智/进退学说转载
-	  - 无意蹭了热点，发现热点真的太有用了。
+	  - 无意蹭了热点远程办公。
   - 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
 	  - 学会设置"所有人都可以留言"
 	  - 打赏
 	  - 流量主
 	  - 商品推广
-  - 2020-02-29《远程办公：如何招聘有自驱力的员工？》
+  - 2020-02-29《远程办公：如何招聘有自驱力的员工？》✔️
 	  - 找准定位 soho / programming/ remote worker
-	- 2020-03-07《教孩子管理金钱》
-	- 2020-03-13 《吕小荣的股票交易原则》，文章名字起的不好，又不是啥名人
+  - 2020-03-07《教孩子管理金钱》✔️
+  - 2020-03-13 《吕小荣的股票交易原则》✔️
+	  - 文章名字起的不好，又不是啥名人 
   - Apr.
   - May.
   - June.
