--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -51,7 +51,7 @@ tags:
 - week11 🔴 Bible 0000011 Pray 1111111
 - week12 ✔️ Bible 0101111 Pray 1111111
 - week13 ✔️ Bible 1111111 Pray 1111101
-- week14 ✔️ Bible 11101 Pray 11111
+- week14 ✔️ Bible 1110101 Pray 1111111
 - week15
 - week16
 - week17
@@ -111,7 +111,7 @@ tags:
 - week11 🔴 跑步 0000010
 - week12 ✔️ 跑步 0000101
 - week13 🔴 跑步 000100 体重快140了，报警！
-- week14 ✔️ 跑步 00110
+- week14 ✔️ 跑步 0011010
 - week15 
 - week16 
 - week17 
@@ -291,6 +291,7 @@ tags:
 - week12 🔴 no progress
 - week13 🔴 no progress
 - week14 🔴 no progress
+- week15
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
@@ -302,6 +303,7 @@ tags:
 - week12 ✔️ JS prototype
 - week13 ✔️ this / apply, call, binding
 - week14 ✔️ this / new
+- week15
 
 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
@@ -352,7 +354,7 @@ tags:
 	  - 找准定位 soho / programming/ remote worker
   - 2020-03-07《教孩子管理金钱》✔️
   - 2020-03-13 《吕小荣的股票交易原则》✔️
-	  - 文章名字起的不好，又不是啥名人 
+	  - 文章名字起的不好，自己又不是啥投资名人，who care 
   - Apr.
   - May.
   - June.
@@ -387,7 +389,7 @@ tags:
     - 2020-01-01 ✔️ 宜山小组元旦聚餐 
     - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
     - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
-    - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。
+    - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。坤叔一家，Sara 也来了。
     - May.
     - June.
     - July.
